<resources>
    <string name="app_name">Firebase Auth MVVM</string>
    <string name="facebook_app_id">FACEBOOK_API_KEY</string>
    <string name="fb_login_protocol_scheme">FACEBOOK_PROTOCOL_SCHEME</string>
    <string name="title_activity_house">HouseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- PiCamera login strings -->
    <string name="url_hint">Base url of your piCamera</string>
    <string name="name_hint">Name your new device</string>
    <string name="password_hint">Password</string>
    <string name="create_pi_camera">Add to your devices</string>

    <!-- Add devices strings -->
    <string name="add_device">Add device</string>
    <!-- Camera strings -->
    <string name="get_snapshot_text">Get Snapshot</string>
    <string name="motion_text">Motion Detection</string>
    <string name="face_text">Face Recognition</string>
    <string name="stream_descriptor">Camera stream</string>
    <string name="image_button">Images</string>
    <!-- Recovery Login -->
    <string name="recovery_login_text">
        Please, retype the password \n
        of your camera
    </string>
    <string name="recovery_login_button">Click to login</string>

    <!-- FCM -->
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>
    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="notification_msg_channel_id" translatable="false">messages_channel</string>
    <string name="notification_msg_channel_name" translatable="true">Messages</string>
    <string name="default_notification_channel_id" translatable="true">Default</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="timer_running">Egg timer is running...</string>
    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
    <string name="snooze">Snooze</string>
</resources>
